# spice-client

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  channel.c  channel.h  connection.c  connection.h  main.c  session.c  session.h  shader_types_hash  shaders.air  shaders.metallib
.cache/clangd/index/: channel.c.54575701E905BA35.idx  channel.c.934CC66315E95752.idx  channel.h.18B50A954C4DCD8A.idx  channel.h.556DE0C93FFB2158.idx  connection.c.041741553010A222.idx  connection.c.04854FDE9B2DEA27.idx  connection.h.8FF0BE917E901A44.idx  connection.h.F0ECBECD2B8E9818.idx  main.c.8FA46356659B88F1.idx  main.c.FDB13DA753035350.idx  session.c.5DAAF170B210D6B9.idx  session.c.EC7DF165511791D2.idx  session.h.2C6B6560F458F425.idx  session.h.89B8FE7337FC6738.idx
include/: channel.c  channel.h  connection.c  connection.h  main.c  session.c  session.h
shader_types/: shader_types.h
src/: canvas.rs  channel.rs  connection.rs  cursor_channel.rs  display_channel.rs  input_channel.rs  lib.rs  main_channel.rs  mouse_channel.rs  scancodes.rs  session.rs  shaders.metal  spice-session.c  window.rs
src/include/spice-client-glib-2.0/: spice-version.h
src/shader_types/: wrapper.h
tests/: main.rs
