[package]
name = "spice-client"
version = "0.1.0"
edition = "2021"

[dependencies]
glib = "0.20.0"
gio = "0.20.0"
metal = "0.29.0"
cocoa = "0.25.0"
winit = "0.29"
objc = "0.2.7"
core-graphics-types = { version = "0.1.3", default-features = false }
prost = "0.13.1"

[build-dependencies]
prost-build = { version = "0.13.1" }

[[example]]
name = "test"
path = "tests/main.rs"
