[package]
name = "spice-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libc = "*"
glib = "0.20.0"
gio = "0.20.0"
metal = "0.29.0"
cocoa = "0.25.0"
winit = "0.29"
objc = "0.2.7"
core-graphics-types = { version = "0.1.3", default-features = false }

[build-dependencies]
bindgen = { version = "0.60", default-features = false, features = [
    "logging",
    "runtime",
    "which-rustfmt",
] }

[[example]]
name = "test"
path = "tests/main.rs"
